--- a/src/config.ini
+++ b/src/config.ini
@@ -1,4 +1,12 @@
+[ABOUT]
+ValidButtons = A-Z, 0-9, F1-F24, shift, control, alt, space, enter, backspace, tab, escape 
+
 [CONTROLS]
+# Completely closes the application
+quit = control+q
+
+# Pauses/Unpauses the program. 
+pause = escape
 
 # Sends in the current value. 
 sendValue = space
