--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-.gitignore
-.vscode/
-__pycache__/
-src/__pycache__/
+**/.gitignore
+**/.vscode/
+**/__pycache__/
 
+**/ignore/
 output/
-ignore/
 
 *.exe
